--- a/Group G/Group G.cbp
+++ b/Group G/Group G.cbp
@@ -15,6 +15,9 @@
 					<Add option="-std=c++11" />
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-pthread" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Group G" prefix_auto="1" extension_auto="1" />
