--- a/Group G/Group G.cbp
+++ b/Group G/Group G.cbp
@@ -14,6 +14,7 @@
 				<Compiler>
 					<Add option="-std=c++11" />
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-pthread" />
@@ -26,6 +27,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -36,9 +38,41 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/Action.h" />
 		<Unit filename="include/Console.h" />
+		<Unit filename="include/Direction.h" />
+		<Unit filename="include/East.h" />
+		<Unit filename="include/Grab.h" />
+		<Unit filename="include/Help.h" />
+		<Unit filename="include/Item.h" />
+		<Unit filename="include/Key.h" />
+		<Unit filename="include/Look.h" />
+		<Unit filename="include/Move.h" />
+		<Unit filename="include/North.h" />
+		<Unit filename="include/Option.h" />
+		<Unit filename="include/Quit.h" />
+		<Unit filename="include/Read.h" />
+		<Unit filename="include/South.h" />
+		<Unit filename="include/Throw.h" />
+		<Unit filename="include/West.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Action.cpp" />
 		<Unit filename="src/Console.cpp" />
+		<Unit filename="src/Direction.cpp" />
+		<Unit filename="src/East.cpp" />
+		<Unit filename="src/Grab.cpp" />
+		<Unit filename="src/Help.cpp" />
+		<Unit filename="src/Item.cpp" />
+		<Unit filename="src/Key.cpp" />
+		<Unit filename="src/Look.cpp" />
+		<Unit filename="src/Move.cpp" />
+		<Unit filename="src/North.cpp" />
+		<Unit filename="src/Option.cpp" />
+		<Unit filename="src/Quit.cpp" />
+		<Unit filename="src/Read.cpp" />
+		<Unit filename="src/South.cpp" />
+		<Unit filename="src/Throw.cpp" />
+		<Unit filename="src/West.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
