--- a/Group G/Group G.cbp
+++ b/Group G/Group G.cbp
@@ -41,6 +41,7 @@
 		<Unit filename="include/Inventory.h" />
 		<Unit filename="include/Item.h" />
 		<Unit filename="include/Option.h" />
+		<Unit filename="include/Room.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Action.cpp" />
 		<Unit filename="src/Console.cpp" />
@@ -48,6 +49,7 @@
 		<Unit filename="src/Inventory.cpp" />
 		<Unit filename="src/Item.cpp" />
 		<Unit filename="src/Option.cpp" />
+		<Unit filename="src/Room.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
