--- a/Group G/Group G.cbp
+++ b/Group G/Group G.cbp
@@ -40,6 +40,7 @@
 		<Unit filename="include/Direction.h" />
 		<Unit filename="include/Inventory.h" />
 		<Unit filename="include/Item.h" />
+		<Unit filename="include/Map.h" />
 		<Unit filename="include/Option.h" />
 		<Unit filename="include/Room.h" />
 		<Unit filename="main.cpp" />
@@ -48,6 +49,7 @@
 		<Unit filename="src/Direction.cpp" />
 		<Unit filename="src/Inventory.cpp" />
 		<Unit filename="src/Item.cpp" />
+		<Unit filename="src/Map.cpp" />
 		<Unit filename="src/Option.cpp" />
 		<Unit filename="src/Room.cpp" />
 		<Extensions>
