--- a/Group G/Group G.cbp
+++ b/Group G/Group G.cbp
@@ -15,6 +15,7 @@
 					<Add option="-std=c++11" />
 					<Add option="-g" />
 					<Add directory="include" />
+					<Add directory="rapidxml" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
