--- a/project/Group G.cbp
+++ b/project/Group G.cbp
@@ -3,11 +3,15 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="Group G" />
+		<Option makefile="makefile" />
+		<Option makefile_is_custom="1" />
+		<Option execution_dir="../../2720-G-Project" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Group G" prefix_auto="1" extension_auto="1" />
+				<Option output="bbcAdventureDebug" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../2720-G-Project" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -17,9 +21,18 @@
 					<Add directory="include" />
 					<Add directory="rapidxml" />
 				</Compiler>
+				<MakeCommands>
+					<Build command="$make " />
+					<CompileFile command="" />
+					<Clean command="$make clean" />
+					<DistClean command="$make -f $makefile distclean$target" />
+					<AskRebuildNeeded command="$make " />
+					<SilentBuild command="$make  &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Group G" prefix_auto="1" extension_auto="1" />
+				<Option output="bbcAdventure" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../../2720-G-Project" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -30,6 +43,14 @@
 				<Linker>
 					<Add option="-s" />
 				</Linker>
+				<MakeCommands>
+					<Build command="$make" />
+					<CompileFile command="" />
+					<Clean command="$make clean" />
+					<DistClean command="$make -f $makefile distclean$target" />
+					<AskRebuildNeeded command="$make" />
+					<SilentBuild command="$make &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 		</Build>
 		<Compiler>
